<resources>
    <string name="app_name">BusArrivalAlram</string>

<!-- A side strings -->
    <string name="a_side_arrival_soon">곧도착</string>

    <string name="a_side_route_name">노선명</string>
    <string name="a_side_current_bus_info">현재 버스 도착시간 / 위치</string>
    <string name="a_side_next_bus_info">다음 버스 도착시간 / 위치</string>

    <string name="a_side_notices_left_side">셔틀버스는 남은 정류장, 현재 위치 대신 예상 시간으로 제공됩니다.</string>
    <string name="a_side_notices_right_side">최근 새로고침: </string>

<!-- B side strings -->
    <string name="b_side_weather_slash">/</string>
    <string name="b_side_weather_micro_dust">미세먼지</string>
    <string name="b_side_weather_ultra_micro_dust">초미세먼지</string>

    <string name="b_side_estimated_label">에서 내려 걸어갈 때 예상 도착 시간</string>
    <string name="b_side_laboratory">종합실험동</string>
    <string name="b_side_peace_plaza">평화의광장</string>
    <string name="b_side_engineering_building_1">제1공학관</string>
    <string name="b_side_engineering_building_2">제2공학관</string>
    <string name="b_side_engineering_building_3">제3공학관</string>
    <string name="b_side_international_building">국제관</string>
    <string name="b_side_fine_art_building">미술관</string>
    <string name="b_side_gym_building">체육관</string>
    <string name="b_side_rotc_building">학군단</string>
    <string name="b_side_music_building">음악관</string>
    <string name="b_side_law_building">법학관</string>
    <string name="b_side_dance_building">무용관</string>
    <string name="b_side_humanity_building">인문관</string>
    <string name="b_side_economy_building">상경관</string>
    <string name="b_side_education_building">사범관</string>
    <string name="b_side_software_building">ICT관</string>

    <string name="b_side_this_month_schedule">이번 달 학사일정</string>
    <string name="b_side_next_month_schedule">다음 달 학사일정</string>

    <string name="b_side_team_name">Team iteration</string>
    <string name="b_side_announcement">LINC+사업단 캡스톤디자인 지원사업의 일환으로\n개발 중이며, 현재 테스트 진행중입니다.\n\n시연 기간: 5월 23일 (화) ~ 6월 말 (예정)</string>
    <string name="b_side_survey_ready_message">서비스 설문조사 준비 중입니다.</string>

    <string name="b_side_survey_message">서비스 설문조사에 참여해 주세요!</string>
    <string name="b_side_app_ad_message">학교에서 버스를 자주 탄다면? 이 앱을 써보세요!\n(안드로이드만 가능)</string>

    <string name="version_info">버전 v0.99</string>
    <string name="build_date">빌드일자 2023-05-24</string>

</resources>