<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BSideActivity">

    <!-- TO DO : B 액티비티 뷰 구현 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="@color/color_top_bar"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/current_date"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="top"
                android:text="2023년 5월 19일"
                android:textColor="@color/color_24"
                android:textSize="@dimen/dimen_b_side_date_text"
                 />

            <TextView
                android:id="@+id/current_time"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="오후 12:34"
                android:textColor="@color/color_shuttle"
                android:textSize="@dimen/dimen_b_side_time_text"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="1.6dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:src="@drawable/divider_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/banner_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="오늘도 화이팅!\n(현재 시범 운영중입니다.)"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_b_side_message_text" />

        </LinearLayout>

        <ImageView
            android:layout_width="1.6dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:src="@drawable/divider_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|center"
                android:orientation="horizontal"
                android:paddingLeft="20dp">

                <ImageView
                    android:id="@+id/climate_image"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginBottom="14dp"
                    android:src="@drawable/cloudy" />

                <TextView
                    android:id="@+id/highest_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="24°"
                    android:textAlignment="center"
                    android:textColor="@color/color_highest_celsius"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/b_side_weather_slash"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/current_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="24°"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/b_side_weather_slash"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lowest_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="18°"
                    android:textAlignment="center"
                    android:textColor="@color/color_lowest_celsius"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/climate_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="맑음"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="top|right|center"
                    android:paddingRight="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:text="@string/b_side_weather_micro_dust"
                        android:textColor="@color/black"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/micro_dust_index"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="93"
                        android:textColor="@color/color_micro_dust_index"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="top|left|center"
                    android:paddingLeft="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/b_side_weather_ultra_micro_dust"
                        android:textColor="@color/black"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/ultra_micro_dust_index"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="28"
                        android:textColor="@color/color_ultra_micro_dust_index"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/divider_bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/information_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

        </LinearLayout>

        <ImageView
            android:layout_width="1.6dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:src="@drawable/divider_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b_side_survey_message"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/qr_code_dummy" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/divider_bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b_side_app_ad_message"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp" />


                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/qr_code_dummy" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>